force-app/main/default/objects/GC_Tier__c/GC_Tier__c.object-meta.xml
<CustomObject>
    <label>GC Tier</label>
    <nameField>
        <label>Graduated Commission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GC Tiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>