force-app/main/default/objects/GC_Tier__c/fields/GCT_Target_Achieved_High__c.field-meta.xml
<CustomField>
    <fullName>GCT_Target_Achieved_High__c</fullName>
    <label>Target Achieved High</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>