force-app/main/default/objects/GC_Tier__c/fields/GCT_Target_Earned_Rate__c.field-meta.xml
<CustomField>
    <fullName>GCT_Target_Earned_Rate__c</fullName>
    <label>Target Earned Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>