force-app/main/default/objects/GC_Tier__c/fields/Graduated_Commission__c.field-meta.xml
<CustomField>
    <fullName>Graduated_Commission__c</fullName>
    <label>Graduated Commission</label>
    <referenceTo>NC_Graduated_Commission__c</referenceTo>
    <relationshipLabel>GC Tiers</relationshipLabel>
    <relationshipName>GC_Tiers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>