force-app/main/default/objects/GC_Tier__c/validationRules/THigh.validationRule-meta.xml
<ValidationRule>
    <fullName>THigh</fullName>
    <active>true</active>
    <errorConditionFormula>GCT_Target_Achieved_Low__c &gt;  GCT_Target_Achieved_High__c</errorConditionFormula>
    <errorDisplayField>GCT_Target_Achieved_High__c</errorDisplayField>
    <errorMessage>The Target Achieved Low must be lower than Target Achieved High</errorMessage>
</ValidationRule>